# minishop_project

./: .gitignore  README.md  items_views.py  main.py  pyproject.toml  requirements.txt
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: db_helper.py
users/: crud.py  views.py
