[project]
name = "minishop-project"
version = "0.1.0"
description = ""
authors = [
    { name = "Denys Talko", email = "sf1vs1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [
    { include = "users" }
]

[tool.poetry.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pytest = "^8.3.5"
pydantic = {extras = ["email"], version = "^2.11.4"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"